force-app/main/default/objects/Asset_Intake_Jurisdiction__c/Asset_Intake_Jurisdiction__c.object-meta.xml
<CustomObject>
    <label>Asset Intake Jurisdiction</label>
    <nameField>
        <displayFormat>AIJ-{00000}</displayFormat>
        <label>Asset Intake Jurisdiction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Intake Jurisdictions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>