force-app/main/default/objects/Asset_Intake_Jurisdiction__c/fields/ClientReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ClientReferenceNumber__c</fullName>
    <label>Client Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>