force-app/main/default/objects/Asset_Intake_Jurisdiction__c/fields/Docket_Type__c.field-meta.xml
<CustomField>
    <fullName>Docket_Type__c</fullName>
    <label>Docket Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard Docket</fullName>
                <label>Hard</label>
            </value>
            <value>
                <fullName>Soft Docket</fullName>
                <default>true</default>
                <label>Soft</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>