force-app/main/default/objects/Asset_Intake_Jurisdiction__c/fields/Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jurisdiction</label>
    <referenceTo>SymphonyLF__Country__c</referenceTo>
    <relationshipLabel>Asset Intake Jurisdictions</relationshipLabel>
    <relationshipName>Asset_Intake_Jurisdictions</relationshipName>
    <type>Lookup</type>
</CustomField>