force-app/main/default/objects/Asset_Intake_Jurisdiction__c/fields/Patent__c.field-meta.xml
<CustomField>
    <fullName>Patent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patent</label>
    <referenceTo>SymphonyLF__Patent__c</referenceTo>
    <relationshipLabel>Asset Intake Jurisdictions</relationshipLabel>
    <relationshipName>Asset_Intake_Jurisdictions</relationshipName>
    <type>Lookup</type>
</CustomField>