force-app/main/default/objects/Asset_Intake_Jurisdiction__c/fields/Trademark__c.field-meta.xml
<CustomField>
    <fullName>Trademark__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trademark</label>
    <referenceTo>SymphonyLF__Trademark__c</referenceTo>
    <relationshipLabel>Asset Intake Jurisdictions</relationshipLabel>
    <relationshipName>Asset_Intake_Jurisdictions</relationshipName>
    <type>Lookup</type>
</CustomField>